# simsopt

./: .buildinfo  genindex.html  getting_started.html  index.html  modules.html  objects.inv  problems.html  py-modindex.html  requirements.txt  run_tests  search.html  searchindex.js  setup.cfg  simsopt.core.html  simsopt.geo.html  simsopt.html  simsopt.mhd.html  simsopt.solve.html  simsopt.util.html  source.html  testing.html
.github/workflows/: ci.yml
examples/: demo2  libensemble_demo  libensemble_demo_vmec
src/simsopt/core/: __init__.py  libensemble_solve.py  run_standalone.py  surface.py
src/simsopt/mhd/: __init__.py  booz_xform_standalone.py  boozer.py  vmec_standalone.py
src/simsopt/transport/: __init__.py  knosos.py
tests/simsopt/mhd/: test_spec.py  test_vmec.py  test_vmec_f90wrap.py  test_vmec_standalone.py
tests/test_files/: aten.sp  input.li383_low_res
