[metadata]
name = simsopt
version = 0.0.1

[options]
install_requires = 
    numpy >= v1.19.0
    monty >= v4.0.0
    mpi4py >= 3.0.3
    jax >= 0.2.4
    jaxlib >= 0.1.56
    scipy >= 1.5.4
    f90nml >= 1.2
package_dir = 
    =src
packages = find:
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
* = input.default, mhd/input.default, simsopt/mhd/input.default, *input.default
